--- a/src/index.html
+++ b/src/index.html
@@ -116,7 +116,7 @@
                                             <li>AOG</li>
                                         </a>
                                         <a href="./index.html#repair">
-                                            <li>Repair <br>Management</li>
+                                            <li>Repair <br>management</li>
                                         </a>
 
 
@@ -132,9 +132,7 @@
                                 </div>
                                 <div class="submenu">
                                     <ul>
-                                        <a href="./contact.html">
-                                            <li>Contact us</li>
-                                        </a>
+
                                         <a href="./contact.html">
                                             <li>Request a Quote</li>
                                         </a>
@@ -275,19 +273,19 @@
                     <div class="service_wrapper">
                         <p class="service_name">Spare Parts</p>
                         <img src="./assets/images/services.svg" class="service_img" alt="">
-                        <p class="service_description">Horizon Mechanics has seven wheel and brake facilities with the
-                            capability to service a high volume of wheels and
-                            brakes.</p>
+                        <p class="service_description">Horizon Mechanics's mission is to
+                            offer the purchase, storage, and sale of all civil aviation products and parts required,
+                            ensuring seamless...</p>
                         <a href="./services.html"><button class="service_btn">Learn More</button></a>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3 px-0 px-sm-1" id="exchange">
                     <div class="service_wrapper">
-                        <p class="service_name">Exchanges</p>
+                        <p class="service_name">Exchange</p>
                         <img src="./assets/images/exchange_img.svg" class="service_img" alt="">
                         <p class="service_description">Our flexible exchange and loan services enable airlines to obtain
                             high-quality, immediate replacement of expensive parts
-                            while avoiding</p>
+                            while avoiding...</p>
                         <a href="./services.html"><button class="service_btn">Learn More</button></a>
                     </div>
                 </div>
@@ -297,7 +295,7 @@
                         <img src="./assets/images/aog_img.svg" class="service_img" alt="">
                         <p class="service_description">We solve our customers challenges by providing 24/7 AOG (Aircraft
                             on
-                            Ground) services, which ensure prompt resolution of issues through.</p>
+                            Ground) services, which ensure prompt resolution of issues through...</p>
                         <a href="./services.html"><button class="service_btn">Learn More</button></a>
                     </div>
                 </div>
@@ -306,7 +304,7 @@
                         <p class="service_name">Repair management</p>
                         <img src="./assets/images/repair_img.svg" class="service_img" alt="">
                         <p class="service_description">Horizon Mechanics offers comprehensive aircraft repair and
-                            maintenance services. Our competencies in highquality repair.</p>
+                            maintenance services. Our competencies in highquality repair...</p>
                         <a href="./services.html"><button class="service_btn">Learn More</button></a>
                     </div>
                 </div>
@@ -608,25 +606,24 @@
                             <a class="footer_logo" href="./index.html"><img src="./assets/images/footer_logo.svg"
                                     class="footer_logo" alt=""></a>
                             <p style="color: #1E1C20;
-                                                font-size: 20px;
-                                                font-family: Figtree;
-                                                font-weight: 500;
-                                                line-height: 32px;">We keep you up to date</p>
+                                                    font-size: 20px;
+                                                    font-family: Figtree;
+                                                    font-weight: 500;
+                                                    line-height: 32px;">We keep you up to date</p>
                             <div class="email_input__wrapper">
                                 <input type="text" placeholder="Your email address" class="email_input">
-                                <a href="mailto:sales@horizonmechanics.com"><img src="./assets/images/mail_icon.svg"
-                                        alt=""></a>
+                                <img src="./assets/images/email_icon.svg" class="email_icon" alt="">
                             </div>
-                            <p class="copyrights">© 2024 Horizons Mechanic. All right reserved</p>
+                            <p class="copyrights">© 2024 Horizons Mechanic. All rights reserved.</p>
                             <div class="social_meadia__wrapper">
                                 <p style="color: #262626;
-                                                    font-size: 16px;
-                                                    font-family: Roboto;
-                                                    font-weight: 500;
-                                                    line-height: 24px;">Stay connected</p>
+                                                        font-size: 16px;
+                                                        font-family: Roboto;
+                                                        font-weight: 500;
+                                                        line-height: 24px;">Stay connected</p>
                                 <div class="social_media__icons">
                                     <a href="https://www.linkedin.com/company/horizonmechanicsllc
-"><img src="./assets/images/linkedin_icon.svg" alt=""></a>
+    "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
                                     <a href="mailto:sales@horizonmechanics.com"><img src="./assets/images/mail_icon.svg"
                                             alt=""></a>
                                 </div>
@@ -678,21 +675,15 @@
                                     <p>AOG</p>
                                 </a>
                                 <a href="./index.html#repair">
-                                    <p>Repair Management</p>
+                                    <p>Repair management</p>
                                 </a>
 
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-12 col-sm-12 footer_item">
-                            <a href="./contact.html">
-                                <p class="footer_header">
-                                    Contact us
-                                </p>
-                            </a>
-                            <div class="contact_links">
-                                <a href="./contact.html">
-                                    <p>Contact with Us</p>
-                                </a>
+
+                            <div class="contact_links" style="margin-top: 0px !important;">
+
                                 <a href="./contact.html">
                                     <p>Request a quote</p>
                                 </a>
@@ -705,38 +696,38 @@
                                         class="footer_logo" alt=""></a>
                             </div>
                             <p style="color: #1E1C20;
-                                                                        font-size: 20px;
-                                                                        font-family: Figtree;
-                                                                        font-weight: 500;
-                                                                        line-height: 32px;">We keep you up to date</p>
+                                                                            font-size: 20px;
+                                                                            font-family: Figtree;
+                                                                            font-weight: 500;
+                                                                            line-height: 32px;">We keep you up to date
+                            </p>
                             <div class="email_input__wrapper___mobile">
                                 <input type="text" placeholder="Your email address" class="email_input">
-                                <a href="mailto:sales@horizonmechanics.com"><img src="./assets/images/mail_icon.svg"
-                                        alt=""></a>
+                                <img src="./assets/images/email_icon.svg" class="email_icon" alt="">
                             </div>
                             <div class="social_meadia__wrapper___mobile">
                                 <p style="color: #262626;
-                                                                            font-size: 16px;
-                                                                            font-family: Roboto;
-                                                                            font-weight: 500;
-                                                                            line-height: 24px;">Stay connected</p>
+                                                                                font-size: 16px;
+                                                                                font-family: Roboto;
+                                                                                font-weight: 500;
+                                                                                line-height: 24px;">Stay connected</p>
                                 <div class="social_media__icons">
                                     <a href="https://www.linkedin.com/company/horizonmechanicsllc
-                                    "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
+                                        "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
                                     <a href="mailto:sales@horizonmechanics.com"><img src="./assets/images/mail_icon.svg"
                                             alt=""></a>
                                 </div>
                             </div>
-                            <p class="copyrights">© 2024 Horizons Mechanic. All right reserved</p>
+                            <p class="copyrights">© 2024 Horizons Mechanic. All rights reserved.</p>
                             <div class="social_meadia__wrapper">
                                 <p style="color: #262626;
-                                                                            font-size: 16px;
-                                                                            font-family: Roboto;
-                                                                            font-weight: 500;
-                                                                            line-height: 24px;">Stay connected</p>
+                                                                                font-size: 16px;
+                                                                                font-family: Roboto;
+                                                                                font-weight: 500;
+                                                                                line-height: 24px;">Stay connected</p>
                                 <div class="social_media__icons">
                                     <a href="https://www.linkedin.com/company/horizonmechanicsllc
-                                    "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
+                                        "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
                                     <a href="mailto:sales@horizonmechanics.com"><img src="./assets/images/mail_icon.svg"
                                             alt=""></a>
                                 </div>
@@ -751,12 +742,13 @@
                                 <div>
                                     <p class="contact_item__header">Phone numbers</p>
                                     <p class="phone_number">(+971)45 613 6000</p>
-                                    <p class="phone_number">(+971)51 233 0032</p>
+                                    <p class="phone_number">(+994)51 233 00 31</p>
                                 </div>
                                 <div>
                                     <p class="contact_item__header">Address</p>
-                                    <p class="address">Business Center1. M Floor. MeydanFZ <br>
-                                        NadAl Sheba, P.O. Box 9305, Dubai, UAE</p>
+                                    <p class="address">Business Center1, M Floor. Meydan FZ, <br>
+                                        Nad Al Sheba, P.O. Box
+                                        9305, Dubai, UAE</p>
 
                                 </div>
                             </div>
