--- a/src/contact.html
+++ b/src/contact.html
@@ -121,7 +121,7 @@
                                             <li>AOG</li>
                                         </a>
                                         <a href="./index.html#repair">
-                                            <li>Repair <br>Management</li>
+                                            <li>Repair <br>management</li>
                                         </a>
 
 
@@ -137,9 +137,7 @@
                                 </div>
                                 <div class="submenu">
                                     <ul>
-                                        <a href="./contact.html">
-                                            <li>Contact us</li>
-                                        </a>
+
                                         <a href="./contact.html">
                                             <li>Request a Quote</li>
                                         </a>
@@ -155,7 +153,7 @@
             </div>
         </div>
     </section>
-    <section id="contact" class="section">
+    <section id="contact" class="section pb-5 mb-5">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -211,7 +209,7 @@
                             <input type="text" class="contact_input d-block" id="number" class="d-block"
                                 placeholder="Your Phone Number">
                         </div>
-                        <p class="subject">Select Subject?</p>
+                        <p class="subject">Select priority?</p>
                         <div class="row">
                             <div class="checkbox_wrapper">
                                 <div class="input_item">
@@ -225,30 +223,30 @@
                                     <input type="checkbox" class="custom_checkbox" name="spare" id="checkbox2"
                                         onclick="updateCheckboxes(this)">
                                     <label class="subject_label" for="spare">
-                                        <p>Spare Parts</p>
+                                        <p>Critical</p>
                                     </label>
                                 </div>
                                 <div class="input_item">
                                     <input type="checkbox" class="custom_checkbox" name="exchange" id="checkbox3"
                                         onclick="updateCheckboxes(this)">
                                     <label class="subject_label" for="exchange">
-                                        <p>Exchanges</p>
+                                        <p>Routine</p>
                                     </label>
                                 </div>
-                                <div class="input_item">
+                                <!-- <div class="input_item">
                                     <input type="checkbox" class="custom_checkbox" name="repair" id="checkbox4"
                                         onclick="updateCheckboxes(this)">
                                     <label class="subject_label" for="repair">
                                         <p>Repaint Management</p>
                                     </label>
-                                </div>
-                                <div class="input_item">
+                                </div> -->
+                                <!-- <div class="input_item">
                                     <input type="checkbox" class="custom_checkbox" name="priority" id="checkbox5"
                                         onclick="updateCheckboxes(this)">
                                     <label class="subject_label" for="priority">
                                         <p>Priority AOG</p>
                                     </label>
-                                </div>
+                                </div> -->
 
                             </div>
                         </div>
@@ -262,7 +260,7 @@
             </div>
         </div>
     </section>
-    <section id="support">
+    <!-- <section id="support">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -302,7 +300,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <section id="footer" class="section w-100">
         <div class="container-fluid">
             <div class="row justify-content-center">
@@ -313,25 +311,24 @@
                             <a class="footer_logo" href="./index.html"><img src="./assets/images/footer_logo.svg"
                                     class="footer_logo" alt=""></a>
                             <p style="color: #1E1C20;
-                                                font-size: 20px;
-                                                font-family: Figtree;
-                                                font-weight: 500;
-                                                line-height: 32px;">We keep you up to date</p>
+                                                        font-size: 20px;
+                                                        font-family: Figtree;
+                                                        font-weight: 500;
+                                                        line-height: 32px;">We keep you up to date</p>
                             <div class="email_input__wrapper">
                                 <input type="text" placeholder="Your email address" class="email_input">
-                                <a href="mailto:sales@horizonmechanics.com"><img src="./assets/images/mail_icon.svg"
-                                        alt=""></a>
+                                <img src="./assets/images/email_icon.svg" class="email_icon" alt="">
                             </div>
-                            <p class="copyrights">© 2024 Horizons Mechanic. All right reserved</p>
+                            <p class="copyrights">© 2024 Horizons Mechanic. All rights reserved.</p>
                             <div class="social_meadia__wrapper">
                                 <p style="color: #262626;
-                                                    font-size: 16px;
-                                                    font-family: Roboto;
-                                                    font-weight: 500;
-                                                    line-height: 24px;">Stay connected</p>
+                                                            font-size: 16px;
+                                                            font-family: Roboto;
+                                                            font-weight: 500;
+                                                            line-height: 24px;">Stay connected</p>
                                 <div class="social_media__icons">
                                     <a href="https://www.linkedin.com/company/horizonmechanicsllc
-"><img src="./assets/images/linkedin_icon.svg" alt=""></a>
+        "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
                                     <a href="mailto:sales@horizonmechanics.com"><img src="./assets/images/mail_icon.svg"
                                             alt=""></a>
                                 </div>
@@ -383,21 +380,15 @@
                                     <p>AOG</p>
                                 </a>
                                 <a href="./index.html#repair">
-                                    <p>Repair Management</p>
+                                    <p>Repair management</p>
                                 </a>
 
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-12 col-sm-12 footer_item">
-                            <a href="./contact.html">
-                                <p class="footer_header">
-                                    Contact us
-                                </p>
-                            </a>
-                            <div class="contact_links">
-                                <a href="./contact.html">
-                                    <p>Contact with Us</p>
-                                </a>
+
+                            <div class="contact_links" style="margin-top: 0px !important;">
+
                                 <a href="./contact.html">
                                     <p>Request a quote</p>
                                 </a>
@@ -410,38 +401,41 @@
                                         class="footer_logo" alt=""></a>
                             </div>
                             <p style="color: #1E1C20;
-                                                                        font-size: 20px;
-                                                                        font-family: Figtree;
-                                                                        font-weight: 500;
-                                                                        line-height: 32px;">We keep you up to date</p>
+                                                                                font-size: 20px;
+                                                                                font-family: Figtree;
+                                                                                font-weight: 500;
+                                                                                line-height: 32px;">We keep you up to
+                                date
+                            </p>
                             <div class="email_input__wrapper___mobile">
                                 <input type="text" placeholder="Your email address" class="email_input">
-                                <a href="mailto:sales@horizonmechanics.com"><img src="./assets/images/mail_icon.svg"
-                                        alt=""></a>
+                                <img src="./assets/images/email_icon.svg" class="email_icon" alt="">
                             </div>
                             <div class="social_meadia__wrapper___mobile">
                                 <p style="color: #262626;
-                                                                            font-size: 16px;
-                                                                            font-family: Roboto;
-                                                                            font-weight: 500;
-                                                                            line-height: 24px;">Stay connected</p>
+                                                                                    font-size: 16px;
+                                                                                    font-family: Roboto;
+                                                                                    font-weight: 500;
+                                                                                    line-height: 24px;">Stay connected
+                                </p>
                                 <div class="social_media__icons">
                                     <a href="https://www.linkedin.com/company/horizonmechanicsllc
-                                    "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
+                                            "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
                                     <a href="mailto:sales@horizonmechanics.com"><img src="./assets/images/mail_icon.svg"
                                             alt=""></a>
                                 </div>
                             </div>
-                            <p class="copyrights">© 2024 Horizons Mechanic. All right reserved</p>
+                            <p class="copyrights">© 2024 Horizons Mechanic. All rights reserved.</p>
                             <div class="social_meadia__wrapper">
                                 <p style="color: #262626;
-                                                                            font-size: 16px;
-                                                                            font-family: Roboto;
-                                                                            font-weight: 500;
-                                                                            line-height: 24px;">Stay connected</p>
+                                                                                    font-size: 16px;
+                                                                                    font-family: Roboto;
+                                                                                    font-weight: 500;
+                                                                                    line-height: 24px;">Stay connected
+                                </p>
                                 <div class="social_media__icons">
                                     <a href="https://www.linkedin.com/company/horizonmechanicsllc
-                                    "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
+                                            "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
                                     <a href="mailto:sales@horizonmechanics.com"><img src="./assets/images/mail_icon.svg"
                                             alt=""></a>
                                 </div>
@@ -456,12 +450,13 @@
                                 <div>
                                     <p class="contact_item__header">Phone numbers</p>
                                     <p class="phone_number">(+971)45 613 6000</p>
-                                    <p class="phone_number">(+971)51 233 0032</p>
+                                    <p class="phone_number">(+994)51 233 00 31</p>
                                 </div>
                                 <div>
                                     <p class="contact_item__header">Address</p>
-                                    <p class="address">Business Center1. M Floor. MeydanFZ <br>
-                                        NadAl Sheba, P.O. Box 9305, Dubai, UAE</p>
+                                    <p class="address">Business Center1, M Floor. Meydan FZ, <br>
+                                        Nad Al Sheba, P.O. Box
+                                        9305, Dubai, UAE</p>
 
                                 </div>
                             </div>
