--- a/src/services.html
+++ b/src/services.html
@@ -120,7 +120,7 @@
                                             <li>AOG</li>
                                         </a>
                                         <a href="./index.html#repair">
-                                            <li>Repair <br>Management</li>
+                                            <li>Repair <br>management</li>
                                         </a>
 
 
@@ -136,9 +136,7 @@
                                 </div>
                                 <div class="submenu">
                                     <ul>
-                                        <a href="./contact.html">
-                                            <li>Contact us</li>
-                                        </a>
+
                                         <a href="./contact.html">
                                             <li>Request a Quote</li>
                                         </a>
@@ -324,25 +322,24 @@
                             <a class="footer_logo" href="./index.html"><img src="./assets/images/footer_logo.svg"
                                     class="footer_logo" alt=""></a>
                             <p style="color: #1E1C20;
-                                                font-size: 20px;
-                                                font-family: Figtree;
-                                                font-weight: 500;
-                                                line-height: 32px;">We keep you up to date</p>
+                                                        font-size: 20px;
+                                                        font-family: Figtree;
+                                                        font-weight: 500;
+                                                        line-height: 32px;">We keep you up to date</p>
                             <div class="email_input__wrapper">
                                 <input type="text" placeholder="Your email address" class="email_input">
-                                <a href="mailto:sales@horizonmechanics.com"><img src="./assets/images/mail_icon.svg"
-                                        alt=""></a>
+                                <img src="./assets/images/email_icon.svg" class="email_icon" alt="">
                             </div>
-                            <p class="copyrights">© 2024 Horizons Mechanic. All right reserved</p>
+                            <p class="copyrights">© 2024 Horizons Mechanic. All rights reserved.</p>
                             <div class="social_meadia__wrapper">
                                 <p style="color: #262626;
-                                                    font-size: 16px;
-                                                    font-family: Roboto;
-                                                    font-weight: 500;
-                                                    line-height: 24px;">Stay connected</p>
+                                                            font-size: 16px;
+                                                            font-family: Roboto;
+                                                            font-weight: 500;
+                                                            line-height: 24px;">Stay connected</p>
                                 <div class="social_media__icons">
                                     <a href="https://www.linkedin.com/company/horizonmechanicsllc
-"><img src="./assets/images/linkedin_icon.svg" alt=""></a>
+        "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
                                     <a href="mailto:sales@horizonmechanics.com"><img src="./assets/images/mail_icon.svg"
                                             alt=""></a>
                                 </div>
@@ -394,21 +391,15 @@
                                     <p>AOG</p>
                                 </a>
                                 <a href="./index.html#repair">
-                                    <p>Repair Management</p>
+                                    <p>Repair management</p>
                                 </a>
 
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-12 col-sm-12 footer_item">
-                            <a href="./contact.html">
-                                <p class="footer_header">
-                                    Contact us
-                                </p>
-                            </a>
-                            <div class="contact_links">
-                                <a href="./contact.html">
-                                    <p>Contact with Us</p>
-                                </a>
+
+                            <div class="contact_links" style="margin-top: 0px !important;">
+
                                 <a href="./contact.html">
                                     <p>Request a quote</p>
                                 </a>
@@ -421,38 +412,41 @@
                                         class="footer_logo" alt=""></a>
                             </div>
                             <p style="color: #1E1C20;
-                                                                        font-size: 20px;
-                                                                        font-family: Figtree;
-                                                                        font-weight: 500;
-                                                                        line-height: 32px;">We keep you up to date</p>
+                                                                                font-size: 20px;
+                                                                                font-family: Figtree;
+                                                                                font-weight: 500;
+                                                                                line-height: 32px;">We keep you up to
+                                date
+                            </p>
                             <div class="email_input__wrapper___mobile">
                                 <input type="text" placeholder="Your email address" class="email_input">
-                                <a href="mailto:sales@horizonmechanics.com"><img src="./assets/images/mail_icon.svg"
-                                        alt=""></a>
+                                <img src="./assets/images/email_icon.svg" class="email_icon" alt="">
                             </div>
                             <div class="social_meadia__wrapper___mobile">
                                 <p style="color: #262626;
-                                                                            font-size: 16px;
-                                                                            font-family: Roboto;
-                                                                            font-weight: 500;
-                                                                            line-height: 24px;">Stay connected</p>
+                                                                                    font-size: 16px;
+                                                                                    font-family: Roboto;
+                                                                                    font-weight: 500;
+                                                                                    line-height: 24px;">Stay connected
+                                </p>
                                 <div class="social_media__icons">
                                     <a href="https://www.linkedin.com/company/horizonmechanicsllc
-                                    "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
+                                            "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
                                     <a href="mailto:sales@horizonmechanics.com"><img src="./assets/images/mail_icon.svg"
                                             alt=""></a>
                                 </div>
                             </div>
-                            <p class="copyrights">© 2024 Horizons Mechanic. All right reserved</p>
+                            <p class="copyrights">© 2024 Horizons Mechanic. All rights reserved.</p>
                             <div class="social_meadia__wrapper">
                                 <p style="color: #262626;
-                                                                            font-size: 16px;
-                                                                            font-family: Roboto;
-                                                                            font-weight: 500;
-                                                                            line-height: 24px;">Stay connected</p>
+                                                                                    font-size: 16px;
+                                                                                    font-family: Roboto;
+                                                                                    font-weight: 500;
+                                                                                    line-height: 24px;">Stay connected
+                                </p>
                                 <div class="social_media__icons">
                                     <a href="https://www.linkedin.com/company/horizonmechanicsllc
-                                    "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
+                                            "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
                                     <a href="mailto:sales@horizonmechanics.com"><img src="./assets/images/mail_icon.svg"
                                             alt=""></a>
                                 </div>
@@ -467,12 +461,13 @@
                                 <div>
                                     <p class="contact_item__header">Phone numbers</p>
                                     <p class="phone_number">(+971)45 613 6000</p>
-                                    <p class="phone_number">(+971)51 233 0032</p>
+                                    <p class="phone_number">(+994)51 233 00 31</p>
                                 </div>
                                 <div>
                                     <p class="contact_item__header">Address</p>
-                                    <p class="address">Business Center1. M Floor. MeydanFZ <br>
-                                        NadAl Sheba, P.O. Box 9305, Dubai, UAE</p>
+                                    <p class="address">Business Center1, M Floor. Meydan FZ, <br>
+                                        Nad Al Sheba, P.O. Box
+                                        9305, Dubai, UAE</p>
 
                                 </div>
                             </div>
