fix: service text change

--- a/src/index.html
+++ b/src/index.html
@@ -250,9 +250,9 @@
 
             </div>
             <div class="row w-100">
-                <div class="col-12 pe-0 ps-4 video_about">
-                    <img style="width: 100%; margin-top: 40px; min-height: 330px" src="./assets/images/image (1).png"
-                        alt="">
+                <div class="col-12 pe-0 ps-4 video_about d-flex justify-content-center">
+                    <img style="margin-top: 40px; min-height: 330px; object-fit: cover;"
+                        src="./assets/images/image (1).png" alt="">
                 </div>
             </div>
         </div>
@@ -273,9 +273,13 @@
                     <div class="service_wrapper">
                         <p class="service_name">Spare Parts</p>
                         <img src="./assets/images/services.svg" class="service_img" alt="">
-                        <p class="service_description">Horizon Mechanics's mission is to
-                            offer the purchase, storage, and sale of all civil aviation products and parts required,
-                            ensuring seamless...</p>
+                        <p class="service_description">Horizon Mechanics&#39;s mission is to
+                            offer the purchase, storage, and
+                            sale of all civil aviation products
+                            and parts required, ensuring
+                            seamless supply chain
+                            management and unparalleled
+                            support to the aviation industry.</p>
                         <a href="./services.html"><button class="service_btn">Learn More</button></a>
                     </div>
                 </div>
@@ -283,9 +287,10 @@
                     <div class="service_wrapper">
                         <p class="service_name">Exchange</p>
                         <img src="./assets/images/exchange_img.svg" class="service_img" alt="">
-                        <p class="service_description">Our flexible exchange and loan services enable airlines to obtain
-                            high-quality, immediate replacement of expensive parts
-                            while avoiding...</p>
+                        <p class="service_description">Our exchange and loan services empower&nbsp;airlines to swiftly
+                            acquire&nbsp;top-tier replacements for
+                            costly&nbsp;parts,&nbsp;sidestepping substantial inventory expansions and eliminating
+                            concerns about core&nbsp;repairs.</p>
                         <a href="./services.html"><button class="service_btn">Learn More</button></a>
                     </div>
                 </div>
@@ -293,9 +298,13 @@
                     <div class="service_wrapper">
                         <p class="service_name">AOG</p>
                         <img src="./assets/images/aog_img.svg" class="service_img" alt="">
-                        <p class="service_description">We solve our customers challenges by providing 24/7 AOG (Aircraft
-                            on
-                            Ground) services, which ensure prompt resolution of issues through...</p>
+                        <p class="service_description">
+                            We&nbsp;solve&nbsp;our&nbsp;customers'&nbsp; challenges
+                            &nbsp;by&nbsp;providing&nbsp;24/7&nbsp;AOG
+                            (Aircraft on Ground)
+                            services, which ensure prompt resolution of issues through the expertise of our
+                            &nbsp;dedicated
+                            professionals.</p>
                         <a href="./services.html"><button class="service_btn">Learn More</button></a>
                     </div>
                 </div>
@@ -303,8 +312,13 @@
                     <div class="service_wrapper">
                         <p class="service_name">Repair management</p>
                         <img src="./assets/images/repair_img.svg" class="service_img" alt="">
-                        <p class="service_description">Horizon Mechanics offers comprehensive aircraft repair and
-                            maintenance services. Our competencies in highquality repair...</p>
+                        <p class="service_description">Horizon Mechanics offers
+                            comprehensive aircraft repair
+                            and maintenance services.
+                            Our competencies in high-
+                            quality repair management
+                            ensure efficient and reliable
+                            solutions &nbsp;for our clients.</p>
                         <a href="./services.html"><button class="service_btn">Learn More</button></a>
                     </div>
                 </div>
